updated e di goes retro added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: default
 {% include home.html %}
 {% include about.html %}
 {% include actividades.html %}
+{% include retro.html %}
 {% include agenda.html %}
 {% include parcerias.html %}
 {% include footer.html %}
